# ExploreTinyRM

./: .gitattributes  .gitignore  CommunityDetection_Louvain.ipynb  README.md  pyproject.toml  requirements-lock.txt
Alex/: CommunityDetection_modular.ipynb  GraphColoring_modular.ipynb  Sudoku4x4_modular.ipynb  Suduku4x4.ipynb  TSP.ipynb  test.ipynb  tsp_data_gen.py
src/exploretinyrm/: __init__.py  trm.py  utils.py
