[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exploretinyrm"
version = "0.1.0"
description = "Explorations of tiny reasoning models in PyTorch"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
license = { text = "MIT" }

# Keep ranges reasonable; we will pin exacts in requirements-lock.txt
dependencies = [
  "torch>=2.3,<3.0",
  "numpy>=1.24,<3.0",
  "pandas>=2.0,<3.0",
  "scikit-learn>=1.3,<2.0",
  "matplotlib>=3.8,<4.0",
  "tqdm>=4.65,<5.0",
  "pyyaml>=6.0,<7.0",
  "rich>=13.0,<14.0",
  "einops>=0.7,<1.0"
]

[project.optional-dependencies]
notebooks = [
  "jupyterlab>=4.0,<5.0",
  "ipykernel>=6.29,<7.0"
]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.5,<1.0",
  "black>=24.3.0,<25.0",
  "pre-commit>=3.6,<4.0",
  "nbstripout>=0.7,<1.0"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
